# hermes-decomp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  mcp-config.example.json
crates/hbc-decomp/: Cargo.toml  build.rs
crates/hbc-decomp-cli/: Cargo.toml
crates/hbc-decomp-cli/src/: cli_args.rs  helpers.rs  main.rs
crates/hbc-decomp-cli/src/commands/: bindiff_cmd.rs  callgraph_cmd.rs  debug_cmd.rs  decompile_cmd.rs  dump_cmd.rs  extract_cmd.rs  mod.rs  update_cmd.rs  write_cmd.rs
crates/hbc-decomp-cli/src/tui/: app.rs  background.rs  content.rs  diff.rs  events.rs  formatting.rs  gitdiff.rs  mod.rs  modules.rs  ui.rs
crates/hbc-decomp-mcp/: Cargo.toml
crates/hbc-decomp-mcp/src/: main.rs  server.rs
crates/hbc-decomp-mcp/src/server/: mod.rs  params.rs  tools_analyze.rs  tools_write.rs
crates/hbc-decomp/examples/: api_usage.rs  verify_fix.rs
crates/hbc-decomp/resources/builtins/: Builtins59.json  Builtins62.json  Builtins71.json  Builtins74.json  Builtins76.json  Builtins83.json  Builtins89.json  Builtins96.json  Builtins98.json  Builtins99.json
crates/hbc-decomp/resources/bytecode/: Bytecode98.json  Bytecode99.json
crates/hbc-decomp/src/: constants.rs  debug.rs  disasm.rs  error.rs  format.rs  frida_hooks.rs  inspect.rs  io.rs  lib.rs  opcode.rs  secrets.rs  util.rs
crates/hbc-decomp/src/analysis/: liveness.rs  loops.rs  mod.rs  reaching.rs  xref.rs
crates/hbc-decomp/src/analysis/closure/: context.rs  info.rs  mod.rs
crates/hbc-decomp/src/analysis/ipa/: body_hints.rs  error_string_hints.rs  graph.rs  hints_tables.rs  inference.rs  mod.rs  property_accesses.rs  resolution.rs  structs.rs  traversal.rs
crates/hbc-decomp/src/analysis/metro/: detection.rs  exports.rs  graph.rs  mod.rs  registry.rs
crates/hbc-decomp/src/analysis/naming/: generation.rs  mod.rs  registers.rs  renaming.rs
crates/hbc-decomp/src/analysis/structure/: conversion.rs  exceptions.rs  loops.rs  mod.rs  recovery.rs
crates/hbc-decomp/src/file/: mod.rs  structure.rs
crates/hbc-decomp/src/file/parser/: buffer.rs  function.rs  header.rs  helpers.rs  instructions.rs  mod.rs  parsing.rs  table.rs
crates/hbc-decomp/src/ir/: mod.rs  types.rs  utils.rs  visitor.rs
crates/hbc-decomp/src/ir/builder/: dispatch.rs  env_state.rs  generator_cfg.rs  ir_builder.rs  jump_analysis.rs  mod.rs  opcodes_arith.rs  opcodes_call.rs  opcodes_environment.rs  opcodes_flow.rs  opcodes_generator.rs  opcodes_load.rs  opcodes_obj.rs  opcodes_prop.rs  opcodes_switch.rs
crates/hbc-decomp/src/ir/cfg/: dot.rs  mod.rs
crates/hbc-decomp/src/ir/expr/: display.rs  mod.rs  ops.rs
crates/hbc-decomp/src/ir/stmt/: display.rs  mod.rs
crates/hbc-decomp/src/pipeline/: batch.rs  cache.rs  decompiler.rs  ir_gen.rs  mod.rs  progress.rs  stages.rs
crates/hbc-decomp/src/pipeline/context/: async_detection.rs  mod.rs  rendering.rs
crates/hbc-decomp/src/transforms/: arrays.rs  default_params.rs  logic_patterns.rs  mod.rs  name_inference.rs  objects.rs  propagate.rs  simplify.rs  spread_rest.rs  ssa.rs  ternary_returns.rs  var_kind.rs  worklet_source.rs
crates/hbc-decomp/src/transforms/chain_access/: inlining.rs  mod.rs  usage.rs
crates/hbc-decomp/src/transforms/class_patterns/: builder.rs  mod.rs  utils.rs
crates/hbc-decomp/src/transforms/cleanup/: advanced.rs  chain.rs  dead_loops.rs  empty_blocks.rs  ensure_return.rs  mod.rs  redundant.rs  tests.rs  undefined.rs
crates/hbc-decomp/src/transforms/codegen/: control_flow.rs  esm_boilerplate.rs  esm_classify.rs  esm_descriptors.rs  esm_gen.rs  esm_patterns.rs  expr_gen.rs  format.rs  mod.rs  stmt_gen.rs
crates/hbc-decomp/src/transforms/data_flow/: concat_propagate.rs  mod.rs
crates/hbc-decomp/src/transforms/destructuring/: arrays.rs  iterator.rs  mod.rs  transformer.rs  utils.rs  v98.rs
crates/hbc-decomp/src/transforms/exports/: mod.rs  rename.rs
crates/hbc-decomp/src/transforms/generator/: analysis.rs  cleanup.rs  mod.rs  state_machine.rs  state_machine_v98.rs  transform.rs
crates/hbc-decomp/src/transforms/inline/: arguments.rs  cleanup.rs  counting.rs  declarations.rs  esm_cleanup.rs  folding.rs  inline_named.rs  mod.rs  reserved_words.rs  strip_this.rs
crates/hbc-decomp/src/transforms/logic_simplify/: expressions.rs  mod.rs  statements.rs  utils.rs
crates/hbc-decomp/src/transforms/optimize/: dead_assign.rs  invert.rs  (+4 more)
crates/hbc-decomp/src/write/: create.rs  encode.rs  footer.rs  header_write.rs  mod.rs  reloc.rs  serialize.rs
(+39 files in other folders)
