[package]
name = "hbc-decomp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to decompile Hermes bytecode (.hbc) from React Native apps"
repository.workspace = true

[[bin]]
name = "hermes-decomp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
hbc-decomp = { path = "../hbc-decomp" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["osc52"] }
regex = "1.10"
serde_json = "1.0"
log = "0.4.29"
env_logger = "0.11.9"
similar = "2.7.0"
