[package]
name = "hbc-decomp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to decompile Hermes bytecode (.hbc) from React Native apps"
repository.workspace = true

[[bin]]
name = "hermes-decomp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
hbc-decomp = { path = "../hbc-decomp" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["osc52"] }
regex = "1.10"
serde_json = "1.0"
log = "0.4.29"
env_logger = "0.11.9"
similar = "2.7.0"

# Self-update: a lightweight synchronous stack (no tokio/hyper) that verifies the
# downloaded archive's SHA-256 against the release SHA256SUMS before installing.
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
semver = "1"
sha2 = "0.10"
self-replace = "1"
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[package.metadata.binstall]
bin = "hermes-decomp"
