[package]
name = "hbc-decomp-mcp"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "MCP server exposing Hermes bytecode decompiler tools for AI assistants"
repository = "https://github.com/SymbioticSec/hermes-decomp"

[[bin]]
name = "hermes-mcp"
path = "src/main.rs"

[dependencies]
hbc-decomp = { path = "../hbc-decomp" }
rmcp = { version = "0.8", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
