[package]
name = "hbc-decomp"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Hermes bytecode (.hbc) decompiler library for React Native apps"
repository = "https://github.com/SymbioticSec/hermes-decomp"
keywords = ["hermes", "bytecode", "decompiler", "react-native", "reverse-engineering"]
categories = ["development-tools", "parser-implementations"]
build = "build.rs"

[dependencies]
bincode = "1.3"
colored = "3.1.1"
env_logger = "0.11.9"
log = "0.4.29"
rayon = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"

[dev-dependencies]
